# cfrx

./: .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  requirements_gpu.txt
cfrx/: episode.py  outcome_sampling_mccfr.py  policy.py  test.py  unroll.py  utils.py
cfrx/algorithms/mccfr/: outcome_sampling.py  test_outcome_sampling.py
cfrx/envs/: __init__.py  base.py
cfrx/envs/kuhn_poker/: __init__.py  constants.py  env.py  test.py
cfrx/envs/kuhn_poker/data/: info_states.npz
cfrx/envs/leduc_poker/: __init__.py  constants.py  env.py
cfrx/envs/leduc_poker/data/: info_states.npz
cfrx/metrics/: __init__.py  best_response.py  exploitability.py  exploitability_test.py  test_exploitability.py
cfrx/trainers/: mccfr.py
cfrx/tree/: __init__.py  traverse.py  tree.py
examples/: mccfr.ipynb  plot_utils.py
