[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cfrx"
description = "Counterfactual Regret Minimization in Jax"
readme = "README.md"
authors = [
  {name="xXx"},
]
requires-python = ">=3.8.0"
version = "0.0.1"
dependencies = [
  "jaxtyping>=0.2.25",
  "jax>=0.4.0",
  "flax>=0.7.0",
  "pgx==1.3.2",
]

[tool.setuptools]
include-package-data = true

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.10"
namespace_packages = true
incremental = false
cache_dir = ""
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = false
allow_redefinition = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
strict_optional = true
strict_equality = true
explicit_package_bases = true
follow_imports = "skip"
ignore_missing_imports = true

[tool.black]
line-length = 89
